feat: Enhance homepage design with intuitive industry elements
- Update hero title to 'To Be the Green Chemistry'
- Remove popup notification layer
- Add Intranet button in header navigation
- Remove PR from customer center menu
- Change header color to green theme
- Implement intuitive background with semiconductor, automotive, PCB elements
- Update hero description to emphasize chemistry, automation, and analysis
- Improve visual clarity and user experience

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -3,15 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ADChemto - Advanced Development through Chemistry</title>
+    <title>ADChemto - Advanced Surface Treatment</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <!-- 팝업레이어 알림 -->
-    <div id="popup-notification" class="popup-notification">
-        팝업레이어 알림이 없습니다.
-    </div>
 
     <!-- 헤더 -->
     <header class="header">
@@ -56,7 +52,6 @@
                                 <li><a href="#notice">공지사항</a></li>
                                 <li><a href="#inquiry">문의하기</a></li>
                                 <li><a href="#faq">자주하는 질문</a></li>
-                                <li><a href="#pr">PR</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -64,6 +59,7 @@
                 <div class="header-actions">
                     <button class="lang-btn">EN</button>
                     <button class="menu-toggle">전체메뉴열기</button>
+                    <a href="../intranet/" class="intranet-btn">Intranet</a>
                 </div>
             </div>
         </div>
@@ -72,11 +68,11 @@
     <!-- 메인 콘텐츠 -->
     <main>
         <!-- 히어로 섹션 -->
-        <section class="hero">
+  <section class="hero">
             <div class="hero-slide active">
                 <div class="hero-background">
                     <div class="hero-content">
-                        <h2 class="hero-title">Innovation Solution Provider</h2>
+                        <h2 class="hero-title">To Be the Green Chemical Company for Future</h2>
                         <p class="hero-subtitle">친환경 화학기술로 지속가능한 미래를 만듭니다.</p>
                         <button class="hero-cta">더 알아보기</button>
                     </div>
@@ -85,9 +81,9 @@
             <div class="hero-slide">
                 <div class="hero-background">
                     <div class="hero-content">
-                        <h2 class="hero-title">Green Chemistry</h2>
-                        <h3 class="hero-subtitle">Specialized Company</h3>
-                        <p class="hero-description">친환경 화학 솔루션을 통해 산업의 지속가능성과 품질의 새로운 기준을 만듭니다.</p>
+                        <h2 class="hero-title">To Be the Convergence Technology<h2>
+                        <h3 class="hero-subtitle">Echo-Chemical & Autonomous Driving Lab.</h3>
+                        <p class="hero-description">화학 및 자동화 그리고 분석을 통한 지속가능한 품질의 기준을 만듭니다.</p>
                     </div>
                 </div>
             </div>
@@ -238,7 +234,7 @@
                     <button class="btn-catalog">카탈로그 다운받기</button>
                 </div>
             </div>
-        </section>
+  </section>
     </main>
 
     <!-- 푸터 -->
