feat(homepage): ?뚯궗?뚭컻 ?곸꽭 about.html 異붽? 諛??ㅻ퉬 ?곕룞, ?ㅻ뜑/?명꽣 濡쒓퀬 ?대┃??硫붿씤 ?대룞, ?쒕∼?ㅼ슫 媛쒖꽑, ?곷떒 硫붾돱 媛꾧꺽 100px, ?명꽣 ?뺣젹 諛??됱긽/媛꾧꺽 議곗젙, EN ?곷Ц ?섏씠吏(index_en.html) 異붽?

--- a/homepage/index_en.html
+++ b/homepage/index_en.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,84 +9,84 @@
 </head>
 <body>
 
-    <!-- 헤더 -->
+    <!-- Header -->
     <header class="header">
         <div class="container">
             <div class="header-content">
-                <a href="index.html" class="logo">
+                <div class="logo">
                     <div class="logo-row">
-                        <img src="images/Company%20Logo_REV_01.jpg" alt="ADChemto 로고" class="logo-image">
+                        <img src="images/Company%20Logo_REV_01.jpg" alt="ADChemto Logo" class="logo-image">
                         <h1>ADChemto</h1>
                     </div>
                     <p class="logo-tagline">Novel Chemical for Surface Treatment</p>
-                </a>
+                </div>
                 <nav class="main-nav">
                     <ul class="nav-menu">
                         <li class="nav-item has-submenu">
-                            <a href="about.html">회사소개</a>
+                            <a href="#about">About</a>
                             <ul class="submenu">
-                                <li><a href="about.html#company-overview">회사개요</a></li>
-                                <li><a href="about.html#vision">비전</a></li>
-                                <li><a href="about.html#talent">인재상</a></li>
-                                <li><a href="about.html#ceo-message">CEO인사말</a></li>
-                                <li><a href="about.html#history">회사연혁</a></li>
-                                <li><a href="about.html#location">오시는길</a></li>
+                                <li><a href="#company-overview">Overview</a></li>
+                                <li><a href="#vision">Vision</a></li>
+                                <li><a href="#talent">Talent</a></li>
+                                <li><a href="#ceo-message">CEO Message</a></li>
+                                <li><a href="#history">History</a></li>
+                                <li><a href="#location">Location</a></li>
                             </ul>
                         </li>
                         <li class="nav-item has-submenu">
-                            <a href="#products">제품정보</a>
+                            <a href="#products">Products</a>
                             <ul class="submenu">
-                                <li><a href="#chemical-products">화학제품</a></li>
-                                <li><a href="#environmental-solutions">환경솔루션</a></li>
-                                <li><a href="#research-services">연구서비스</a></li>
-                                <li><a href="#custom-solutions">맞춤솔루션</a></li>
+                                <li><a href="#chemical-products">Chemicals</a></li>
+                                <li><a href="#environmental-solutions">Environmental Solutions</a></li>
+                                <li><a href="#research-services">R&D Services</a></li>
+                                <li><a href="#custom-solutions">Custom Solutions</a></li>
                             </ul>
                         </li>
                         <li class="nav-item has-submenu">
-                            <a href="#technology">기술자료</a>
+                            <a href="#technology">Technology</a>
                             <ul class="submenu">
-                                <li><a href="#green-chemistry">친환경화학</a></li>
-                                <li><a href="#sustainability">지속가능성</a></li>
-                                <li><a href="#innovation">혁신기술</a></li>
+                                <li><a href="#green-chemistry">Green Chemistry</a></li>
+                                <li><a href="#sustainability">Sustainability</a></li>
+                                <li><a href="#innovation">Innovation</a></li>
                             </ul>
                         </li>
                         <li class="nav-item has-submenu">
-                            <a href="#customer">고객센터</a>
+                            <a href="#customer">Support</a>
                             <ul class="submenu">
-                                <li><a href="#notice">공지사항</a></li>
-                                <li><a href="#inquiry">문의하기</a></li>
-                                <li><a href="#faq">자주하는 질문</a></li>
+                                <li><a href="#notice">Notice</a></li>
+                                <li><a href="#inquiry">Inquiry</a></li>
+                                <li><a href="#faq">FAQ</a></li>
                             </ul>
                         </li>
                     </ul>
                 </nav>
                 <div class="header-actions">
-                    <a href="index_en.html" class="lang-btn">EN</a>
-                    <button class="menu-toggle">전체메뉴열기</button>
+                    <a href="index.html" class="lang-btn">KR</a>
+                    <button class="menu-toggle">Menu</button>
                     <a href="../intranet/" class="intranet-btn">Intranet</a>
                 </div>
             </div>
         </div>
     </header>
 
-    <!-- 메인 콘텐츠 -->
+    <!-- Main -->
     <main>
-        <!-- 히어로 섹션 -->
-  <section class="hero">
+        <!-- Hero -->
+        <section class="hero">
             <div class="hero-slide active">
                 <div class="hero-background">
                     <div class="hero-content">
                         <h2 class="hero-title">To Be the Green Chemical Company for Future</h2>
-                        <p class="hero-subtitle">친환경 화학기술로 지속가능한 미래를 만듭니다.</p>
+                        <p class="hero-subtitle">We build a sustainable future with eco-friendly chemical technology.</p>
                     </div>
                 </div>
             </div>
             <div class="hero-slide">
                 <div class="hero-background">
                     <div class="hero-content">
-                        <h2 class="hero-title">To Be the Convergence Technology<h2>
+                        <h2 class="hero-title">To Be the Convergence Technology</h2>
                         <h3 class="hero-subtitle">Echo-Chemical & Autonomous Driving Lab.</h3>
-                        <p class="hero-description">화학 및 자동화 그리고 분석을 통한 지속가능한 품질의 기준을 만듭니다.</p>
+                        <p class="hero-description">We set a new standard of sustainable quality through chemistry, automation, and analytics.</p>
                     </div>
                 </div>
             </div>
@@ -96,34 +96,34 @@
             </div>
         </section>
 
-        <!-- 제품 섹션 -->
+        <!-- Products -->
         <section class="products-section">
             <div class="container">
                 <div class="section-header">
                     <h2 class="section-title">PRODUCT</h2>
-                    <p class="section-subtitle">고객의 니즈에 최적화된 제품 및 혁신을 제공합니다.</p>
+                    <p class="section-subtitle">We deliver products and innovations optimized to customer needs.</p>
                 </div>
                 <div class="products-grid">
                     <div class="product-card">
                         <div class="product-image">
-                            <img src="images/product1.jpg" alt="표면처리 약품">
+                            <img src="images/product1.jpg" alt="Surface Treatment Chemicals">
                         </div>
-                        <h3 class="product-title">표면처리 약품</h3>
-                        <p class="product-description">고품질 표면처리 솔루션</p>
+                        <h3 class="product-title">Surface Treatment Chemicals</h3>
+                        <p class="product-description">High-quality surface treatment solutions</p>
                     </div>
                     <div class="product-card">
                         <div class="product-image">
-                            <img src="images/product2.jpg" alt="연구개발 서비스">
+                            <img src="images/product2.jpg" alt="R&D Services">
                         </div>
-                        <h3 class="product-title">연구개발 서비스</h3>
-                        <p class="product-description">맞춤형 연구 및 개발 솔루션</p>
+                        <h3 class="product-title">R&D Services</h3>
+                        <p class="product-description">Tailored research and development solutions</p>
                     </div>
                     <div class="product-card">
                         <div class="product-image">
-                            <img src="images/product3.jpg" alt="인라인 약품분석">
+                            <img src="images/product3.jpg" alt="Inline Chemical Analysis">
                         </div>
-                        <h3 class="product-title">인라인 약품분석</h3>
-                        <p class="product-description">자동화를 위한 실시간 품질 분석 및 공정관리</p>
+                        <h3 class="product-title">Inline Chemical Analysis</h3>
+                        <p class="product-description">Real-time quality analytics and process control for automation</p>
                     </div>
                 </div>
                 <div class="section-action">
@@ -132,31 +132,31 @@
             </div>
         </section>
 
-        <!-- 회사 소개 섹션 -->
-        <section class="about-section">
+        <!-- About -->
+        <section class="about-section" id="about">
             <div class="container">
                 <div class="about-content">
                     <div class="about-text">
                         <h2 class="about-title">About <strong>ADChemto</strong></h2>
                         <p class="about-description">
-                            ADChemto는 친환경 화학기술로 PCB, 반도체, 자동차 등 첨단 산업의 표면처리 공정을 혁신하는 기업입니다.
-                            <br>고객 맞춤형 화학 솔루션과 연구개발 서비스를 통해 산업의 품질 기준을 새롭게 제시합니다.
+                            ADChemto innovates surface treatment processes across advanced industries such as PCB, semiconductors, and automotive with eco-friendly chemical technologies.
+                            <br>We redefine industrial quality standards through customer-tailored chemical solutions and comprehensive R&D services.
                         </p>
                         <div class="about-features">
                             <div class="feature-item">
                                 <div class="feature-icon">🌱</div>
-                                <h4>친환경 기술</h4>
-                                <p>저유해·저탄소 공정과 무독성 대체기술 적용</p>
+                                <h4>Green Technology</h4>
+                                <p>Low-emission, low-toxicity processes and non-toxic alternatives</p>
                             </div>
                             <div class="feature-item">
                                 <div class="feature-icon">🔬</div>
-                                <h4>혁신적 기술</h4>
-                                <p>표면처리·분석 자동화를 위한 자체 신기술</p>
+                                <h4>Innovative Technology</h4>
+                                <p>Proprietary technologies for automation of surface treatment and analytics</p>
                             </div>
                             <div class="feature-item">
                                 <div class="feature-icon">🎯</div>
-                                <h4>고객 맞춤형</h4>
-                                <p>공정·설비·품질 조건에 맞춘 최적화 제공</p>
+                                <h4>Customer-Centric</h4>
+                                <p>Optimization tailored to process, equipment, and quality requirements</p>
                             </div>
                         </div>
                     </div>
@@ -164,12 +164,9 @@
             </div>
         </section>
 
-        
-
-        
     </main>
 
-    <!-- 푸터 -->
+    <!-- Footer -->
     <footer class="footer">
         <div class="container">
             <div class="footer-content">
@@ -177,32 +174,32 @@
                     <div class="footer-brand">
                         <div class="logo">
                             <div class="logo-row">
-                                <img src="images/Company%20Logo_REV_01.jpg" alt="ADChemto 로고" class="logo-image footer-logo-image">
+                                <img src="images/Company%20Logo_REV_01.jpg" alt="ADChemto Logo" class="logo-image footer-logo-image">
                                 <h1 class="footer-brand-name">ADChemto</h1>
                             </div>
                             <p class="logo-tagline footer-tagline">Novel Chemical for Surface Treatment</p>
                         </div>
                     </div>
                     <div class="footer-links">
-                        <a href="#" class="footer-link">개인정보 처리방침</a>
+                        <a href="#" class="footer-link">Privacy Policy</a>
                         <span class="footer-sep">|</span>
-                        <a href="#" class="footer-link">이메일 집단 수신거부</a>
+                        <a href="#" class="footer-link">Opt-out of Bulk Emails</a>
                     </div>
                 </div>
                 <div class="footer-info">
                     <div class="footer-address">
-                        <h5>본사</h5>
-                        <p>A. (12345) 광주광역시 광산구 남부대학로 38, 창업보육센터</p>
+                        <h5>Head Office</h5>
+                        <p>A. NamBudae-ro 38, Gwangsan-gu, Gwangju, Startup Incubation Center</p>
                         <p>E-mail. info@adchemto.com</p>
                     </div>
                     <div class="footer-address">
-                        <h5>공장</h5>
-                        <p>A. (54321) 경기도 안산시 첨단로 23 </p>
+                        <h5>Factory</h5>
+                        <p>A. 23 Cheomdan-ro, Ansan, Gyeonggi-do</p>
                     </div>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>Copyright ⓒ (주)ADChemto ALL RIGHTS RESERVED.</p>
+                <p>Copyright ⓒ ADChemto Co., Ltd. ALL RIGHTS RESERVED.</p>
             </div>
         </div>
     </footer>
@@ -210,3 +207,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
+
